[gd_scene load_steps=27 format=2]

[ext_resource path="res://sprites/pablo/idle3.png" type="Texture" id=1]
[ext_resource path="res://sprites/pablo/jump_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/pablo/jump_2.png" type="Texture" id=3]
[ext_resource path="res://sprites/pablo/idle0.png" type="Texture" id=4]
[ext_resource path="res://sprites/pablo/hurtanddeath.png" type="Texture" id=5]
[ext_resource path="res://sprites/pablo/idle2.png" type="Texture" id=6]
[ext_resource path="res://sprites/pablo/idle1.png" type="Texture" id=7]
[ext_resource path="res://src/Enemies/Pablo.gd" type="Script" id=8]
[ext_resource path="res://assets/sounds/Pablo_Felipe_hurt.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/Pablo_Felipe_jump_2.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/Pablo_Felipe_land.mp3" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/pablo.mp3" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/FELIPE.mp3" type="AudioStream" id=13]
[ext_resource path="res://sprites/pablo/gunhand1.png" type="Texture" id=14]
[ext_resource path="res://sprites/pablo/gunhand2.png" type="Texture" id=15]
[ext_resource path="res://assets/sounds/Pablo_Felipe_shoot.mp3" type="AudioStream" id=16]
[ext_resource path="res://assets/sounds/PABLO_FELIPE.mp3" type="AudioStream" id=17]
[ext_resource path="res://assets/sounds/UOOOGHh.mp3" type="AudioStream" id=18]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float hit_opacity = 0;
uniform float red = 0.933;
uniform float blue = 0.294;
uniform float green = 0.169;

void fragment(){
 COLOR.rgb = texture(TEXTURE, UV).rgb * (1.0 - hit_opacity) + vec3(red,blue,green) * hit_opacity;
 COLOR.a = texture(TEXTURE, UV).a ; 
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/hit_opacity = 0.0
shader_param/red = 0.549
shader_param/blue = 0.005
shader_param/green = 0.741

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": false,
"name": "ow",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 21 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 1, 0.0392157, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=7]
resource_name = "blink"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 5.46416, 0.241484 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 8 )

[node name="Gunhand1" type="Sprite" parent="."]
position = Vector2( -3, 2 )
texture = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 6 )
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="Gunhand2" type="Sprite" parent="."]
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11 )
shape = SubResource( 2 )

[node name="SoundEffects" type="Node" parent="."]

[node name="Ow" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 9 )

[node name="Jump" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 10 )
volume_db = -14.733

[node name="Land" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 11 )
volume_db = 8.667

[node name="PABLO" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 12 )
volume_db = 6.067

[node name="FELIPE" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 13 )
volume_db = 6.0

[node name="Shoot" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 16 )

[node name="PABLOFELIPE" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 17 )

[node name="OOG" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 18 )
volume_db = 8.667

[node name="DreamCasts" type="Node2D" parent="."]

[node name="left" type="RayCast2D" parent="DreamCasts"]
position = Vector2( -8, 11 )
enabled = true
cast_to = Vector2( -10, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 11 )
shape = SubResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -9.0
margin_top = -22.0
margin_right = -5.0
margin_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 4.6397, 0.146026 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, 11.5 )
scale = Vector2( 1, 2.15 )

[node name="blink" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/blink = SubResource( 7 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
